--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
     "private": true,
     "scripts": {
+        "watch": "vite",
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "prod": "vite build",
+        "production": "vite build"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.7",
+        "@mars3d/heatmap.js": "^2.0.6",
         "autoprefixer": "^10.4.11",
         "axios": "^0.27",
         "laravel-vite-plugin": "^0.6.0",
@@ -15,8 +19,5 @@
         "tailwindcss": "^3.1.8",
         "tippy.js": "^6.3.7",
         "vite": "^3.0.0"
-    },
-    "dependencies": {
-        "@mars3d/heatmap.js": "^2.0.6"
     }
 }
