--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,9 @@
         ],
         "test": [
             "vendor/bin/pest"
+        ],
+        "format": [
+            "vendor/bin/pint"
         ]
     },
     "extra": {
