--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
         "guzzlehttp/guzzle": "^7.2",
         "jeffgreco13/filament-breezy": "^1.4",
         "laravel/framework": "^9.19",
+        "laravel/octane": "^1.3",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "spatie/emoji": "^4.0",
+        "spiral/roadrunner": "^2.8.2",
         "stevebauman/location": "^6.5",
         "tedivm/jshrink": "^1.4"
     },
